--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="register_text">Não tem uma conta? Cadastre-se</string>
     <string name="default_error_message">Ops algo deu errado …</string>
     <string name="home_title">O que você quer assistir?</string>
+    <string name="popular_movies">Filmes populares</string>
 </resources>
