--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="default_error_message">Ops algo deu errado …</string>
     <string name="home_title">O que você quer assistir?</string>
     <string name="popular_movies">Filmes populares</string>
+    <string name="popular_tv_shows">Séries populares</string>
 </resources>
