--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="home_title">O que você quer assistir?</string>
     <string name="popular_movies">Filmes populares</string>
     <string name="popular_tv_shows">Séries populares</string>
+    <string name="synopsis">Sinopse</string>
 </resources>
