--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="popular_movies">Filmes populares</string>
     <string name="popular_tv_shows">Séries populares</string>
     <string name="synopsis">Sinopse</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cast">Elenco</string>
+    <string name="poster">Poster</string>
 </resources>
