--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">Popcorn</string>
     <string name="default_error_message">Oops …</string>
-    <string name="error">Ocorreu um erro.</string>
-    <string name="home_title">O que você quer assistir?</string>
-    <string name="popular_movies">Filmes populares</string>
-    <string name="popular_tv_shows">Séries populares</string>
-    <string name="synopsis">Sinopse</string>
-    <string name="cast">Elenco</string>
+    <string name="error">An error occurred.</string>
+    <string name="home_title">What do you want to watch?</string>
+    <string name="popular_movies">Popular Movies</string>
+    <string name="popular_tv_shows">Popular TV Shows</string>
+    <string name="synopsis">Synopsis</string>
+    <string name="cast">Cast</string>
     <string name="poster">Poster</string>
 </resources>
